--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 body, html {
-  margin: 0;
-  padding: 0;
+  margin: 0px !important;
+  padding: 0px !important;
   font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
 }
