--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,11 @@
-body, html {
-  margin: 0px !important;
-  padding: 0px !important;
-  font-family: 'Roboto', sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Roboto", sans-serif;
   background-color: #f5f5f5;
 }
